objects/DMAPP__Insight_Smart_Node_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Dealmaker ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Competitor__c</fullName>
        <inlineHelpText>Click the search icon to search for and select the Competitor that you want to link to the Smart Element.</inlineHelpText>
        <label>Competitor</label>
        <referenceTo>DMAPP__Insight_Competitor__c</referenceTo>
        <relationshipName>Insight_Solution_Competitors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Smart_Node__c</fullName>
        <inlineHelpText>Select the Smart Element for which you want to add a Competitor.</inlineHelpText>
        <label>Smart Element</label>
        <referenceTo>DMAPP__Insight_Smart_Node__c</referenceTo>
        <relationshipName>Insight_Solution_Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Smart Element Competitor</label>
    <nameField>
        <displayFormat>ISNC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Smart Element Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DMAPP__Prevent_Field_Update</fullName>
        <active>true</active>
        <description>Prevents users updating the Field</description>
        <errorConditionFormula>ISCHANGED(DMAPP__DealmakerID__c)</errorConditionFormula>
        <errorDisplayField>DMAPP__DealmakerID__c</errorDisplayField>
        <errorMessage>The Dealmaker ID field cannot be updated after creation</errorMessage>
    </validationRules>
</CustomObject>